[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://addons/local_agents/examples/Agent3DExample.gd" id="1_2r4j7"]
[ext_resource type="PackedScene" path="res://addons/local_agents/agents/Agent3D.tscn" id="2_f6j4y"]

[sub_resource type="PlaneMesh" id="PlaneMesh_50tx4"]
size = Vector2(14, 14)

[sub_resource type="BoxShape3D" id="BoxShape3D_u4q2t"]
size = Vector3(14, 0.2, 14)

[node name="Agent3DExample" type="Node3D"]
script = ExtResource("1_2r4j7")

[node name="Agent3D" parent="." instance=ExtResource("2_f6j4y")]
unique_name_in_owner = true

[node name="Ground" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_u4q2t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("PlaneMesh_50tx4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.859009, -0.246761, 0.448301, 0, 0.876727, 0.480988, -0.511962, -0.413126, 0.752907, 0, 3.69511, 0)
light_energy = 1.3
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.994522, 0, -0.104528, -0.0441546, 0.906279, -0.420364, 0.0947338, 0.422677, 0.901314, 0, 4.25165, 6.44524)
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUDPanel" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
offset_left = 16.0
offset_top = 16.0
offset_right = 430.0
offset_bottom = 500.0

[node name="HUDMargin" type="MarginContainer" parent="CanvasLayer/HUDPanel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HUDVBox" type="VBoxContainer" parent="CanvasLayer/HUDPanel/HUDMargin"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
layout_mode = 2
text = "Agent3D Runtime Demo"

[node name="GuidanceLabel" type="RichTextLabel" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 86)
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
text = "Preparing checks..."

[node name="RuntimeStatusLabel" type="Label" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
text = "Runtime: Checking..."

[node name="ModelStatusLabel" type="Label" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
text = "Model file: Checking..."

[node name="LoadStatusLabel" type="Label" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Runtime model: Checking..."

[node name="ActionStatusLabel" type="Label" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
text = "Action: Idle"

[node name="ButtonsRow" type="HBoxContainer" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
layout_mode = 2

[node name="RefreshStatusButton" type="Button" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh Status"

[node name="LoadModelButton" type="Button" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox/ButtonsRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Load Default Model"

[node name="PromptInput" type="LineEdit" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Prompt Agent3D and press Enter"

[node name="SendButton" type="Button" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Send"

[node name="TranscriptLabel" type="RichTextLabel" parent="CanvasLayer/HUDPanel/HUDMargin/HUDVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
size_flags_vertical = 3
fit_content = true
scroll_following = true
text = ""
